# bifrost_whats_my_species

./: .dockerignore  .gitignore  Dockerfile  HISTORY.md  README.md  config.yaml  custom_install.sh  docker-compose.dev.yaml  docker-compose.yaml  environment.yml  launcher.py  pipeline.smk  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker_build_and_push_on_tag.yml  docker_build_and_push_to_dockerhub.yml  docker_build_dev_on_push_branch_dev.yml  docker_build_latest_on_push_branch_master.yml  docker_build_version_on_release.yml  run_tests.yml  test_standard_workflow.yml
bifrost_whats_my_species/: __init__.py  __main__.py  config.yaml  datadump.py  launcher.py  pipeline.smk
tests/: test_1_standard_workflow.py  test_simple.py
